tests/baselines/reference/doExpressionArguments.errors.txt
tests/cases/compiler/doExpressionArguments.ts(5,5): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionArguments.ts(10,5): error TS7030: Not all code paths return a value.


==== tests/cases/compiler/doExpressionArguments.ts (2 errors) ====
    async function* a(b, c, d) {
        console.log(arguments)
        arguments[1] = "before"
        console.log(b, c, d)
        console.log(do {
        ~~~~~~~~~~~~~~~~
            yield;
    ~~~~~~~~~~~~~~
            arguments[1] = "after";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            arguments;
    ~~~~~~~~~~~~~~~~~~
        })
    ~~~~~~
!!! error TS7030: Not all code paths return a value.
        console.log(b, c, d)
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
    }
    const gen = a(0, 1, 2)
    gen.next().then(() => gen.next())
    // Correct result:
    // [Arguments] 0, 1, 2
    // 0, "before", 2
    // (inside do) [Arguments] 0, "after", 2
    // 0, "after", 2
    